tests/regression/illtyped/approximation.gr
bar : Int |2| -> Int |4|
bar |n| = |n|
